[Misc] Try to make it clearer in the Jenkins UI + remove unused MaxPermSize