@@ -23,7 +23,7 @@
 // @Library("XWiki@<branch, tag, sha1>") _
 // See https://github.com/jenkinsci/workflow-cps-global-lib-plugin for details.
 
-def globalMavenOpts = '-Xmx2500m -XX:MaxPermSize=768m -Xms512m -XX:ThreadStackSize=2048'
+def globalMavenOpts = '-Xmx2500m -Xms512m -XX:ThreadStackSize=2048'
 
 parallel(
   "main": {
@@ -33,6 +33,7 @@ parallel(
       // revapi and more.
       // Configures the snapshot extension repository in XWiki in the generated distributions to make it easy for
       // developers to install snapshot extensions when they do manual tests.
+      stage("Main Build")
       xwikiBuild {
         mavenOpts = globalMavenOpts
         goals = 'clean deploy'
@@ -47,6 +48,7 @@ parallel(
 
     node {
       // Build the distributions
+      stage("Distribution Build")
       xwikiBuild {
         mavenOpts = globalMavenOpts
         goals = 'clean deploy'
@@ -58,6 +60,7 @@ parallel(
   "testrelease": {
     node {
       // Simulate a release and verify all is fine.
+      stage("Test Release Build")
       xwikiBuild {
         mavenOpts = globalMavenOpts
         goals = 'clean install'
@@ -69,6 +72,7 @@ parallel(
   "quality": {
     node {
       // Run the quality checks
+      stage("Quality Build")
       xwikiBuild {
         mavenOpts = globalMavenOpts
         goals = 'clean install jacoco:report'
